# sfai

./: .gitignore  README.md  TODO  config.example.yaml  config.yaml  count-files.sh  mkdocs.yml  params.json  pyproject.toml
docs/: generate_api.py  quickstart.md  usage.md
docs/api/: cli.md  data.md  export.md  logging.md  operators.md  pipeline.md
services/filetracker/src/: main.py
src/sfai/: sfai.py
src/sfai/cli/: coco2biigle.py  cpfiles.py  segment.py
src/sfai/config/: __init__.py  config.py  default.py
src/sfai/data/: __init__.py  dataset.py  tiler.py
src/sfai/export/: __init__.py  data.py  handler.py  writer.py
src/sfai/logging/: __init__.py  logger.py  progess.py
src/sfai/mask/: __init__.py  processor.py
src/sfai/operators/: background.py  base.py  binary.py  centers.py  contours.py  sam.py  watershed.py
src/sfai/pipeline/: __init__.py  context.py  pipeline.py
src/sfai/runners/: dataset.py  image.py
src/sfai/scripts/: __init__.py  coco2biigle.py  cpfiles.py
src/sfai/segmentation/: segment.py
src/sfai/stitch/: __init__.py  mask.py  stitch.py
src/soilfauna/: bg_remover.py  soilfauna.py
src/soilfauna/cli/: __init__.py  coco2biigle.py  cpfiles.py  segment.py
src/soilfauna/config/: __init__.py  config.py  default.py
src/soilfauna/data/: __init__.py  dataset.py  tiler.py
src/soilfauna/dataset/: loader.py  old.py
src/soilfauna/export/: __init__.py  data.py  handler.py  writer.py
src/soilfauna/image/: process.py
src/soilfauna/logging/: __init__.py  logger.py
src/soilfauna/mask/: __init__.py  processor.py
src/soilfauna/model/: __init__.py  sam.py
src/soilfauna/operators/: __init__.py  background.py  base.py  binary.py  sam.py  (+3 more)
(+13 files in other folders)
