[project]
name = "soil-fauna-ai"
version = "0.0.1"
description = ""
authors = [
  { name = "Robin Danz", email = "robin.danz@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

dependencies = [
    "requests",
    "python-dotenv",
    "opencv-python",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "scikit-image",
    "shapely",
    "pandas",
    "pyyaml",
]

[project.optional-dependencies]
sam = [
  "ultralytics",
]

[project.urls]
Homepage = "https://github.com/RobinDanz/soil-fauna-ai"

[project.scripts]
soilfauna = "soilfauna.soilfauna:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
